Updated styling etc...  of the resume page.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@10 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -2,120 +2,125 @@
     User: jbeck
     Date: Mar 28, 2009
     Time: 3:16:49 PM
-    To change this template use File | Settings | File Templates.
 %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-  <head>
+<head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Justin Beck - Resume</title>
     <%= stylesheet_link_tag "default" %>
     <script type="text/javascript" src="javascripts/prototype.js"></script>
     <script type="text/javascript" src="javascripts/effects.js"></script>
-    <script type="text/javascript" src="javascripts/about.js"></script>
-  </head>
-  <body>
+</head>
+<body>
+<div align="center">
+    <h2>Justin C. Beck</h2>
+    <div style="margin-top: -15px">
+        E-Mail: <a href="mailto:justinbeck@mac.com">justinbeck@mac.com</a><br />
+        <a href="http://www.justinbeck.com">www.justinbeck.com</a>
+    </div>
+    <div align="left" style="width: 600px; margin-left: .5in">
+        <h3>Summary of Experience and Responsibilities</h3>
+        <div style="margin-left: 15px">
+            <h4><strong>Senior Software Developer:</strong> Software Development Firm</h4>
+            <ul style="margin-top: -15px">
+                <li>Develop full project architecture</li>
+                <li>Lead development efforts in small teams of three or four developers</li>
+                <li>Work in short iterations to bring maximum value for customer satisfaction and confidence</li>
+                <li>Development and implementation of Agile development environment</li>
+                <li>Customer facing role for requirements gathering</li>
+            </ul>
+            <h4><strong>Java Developer:</strong> Business Rules, Java Development Project</h4>
+            <ul style="margin-top: -15px">
+                <li>Development of Java application to parse proprietary database schema to SQL Server</li>
+                <li>DDL implementation subsequently done using Hibernate and MySQL</li>
+                <li>Requirements gathering for Tomcat deployment</li>
+            </ul>
+            <h4><strong>Director of IT:</strong> Government Consulting Firm</h4>
+            <ul style="margin-top: -15px">
+                <li>Develop and document all IT processes, policies, procedures and best practices</li>
+                <li>Design, implement and maintain company wide network infrastructure</li>
+                <li>Provide recommendations on all company hardware and software solutions</li>
+                <li>Manage procurement and deployment of all personnel equipment</li>
+            </ul>
+            <h4><strong>Project Manager:</strong> Database Development Project</h4>
+            <ul style="margin-top: -15px">
+                <li>Develop and maintain project schedules based on prior client experience</li>
+                <li>Manage requirements gathering, documentation, verification and analysis</li>
+                <li>Manage design work and ensure design meets requirements</li>
+                <li>Manage development work to WBS and requirements</li>
+                <li>Provide thought leadership and motivation to project team</li>
+            </ul>
+            <h4><strong>Systems/Network Administrator</strong></h4>
+            <ul style="margin-top: -15px">
+                <li>Development of network infrastructure</li>
+                <li>Procurement of approved infrastructure equipment</li>
+                <li>Installation and configuration of network infrastructure</li>
+                <li>Configuration of Windows 2000 servers to operate on network infrastructure</li>
+                <li>Configuration of Windows 2000 and XP workstations to operate on network infrastructure</li>
+            </ul>
+            <h4><strong>Manager of Configuration Management:</strong> Java Development Project</h4>
+            <ul style="margin-top: -15px">
+                <li>Development and implementation of CM best practices</li>
+                <li>Maintenance of CM Server environment</li>
+                <li>Selection and procurement of CM literature for development team</li>
+                <li>Management of developed Java code</li>
+            </ul>
+            <h4><strong>Manager of Testing:</strong> Java Development Project</h4>
+            <ul style="margin-top: -15px">
+                <li>Analysis of developed documentation to produce test harness specifications</li>
+                <li>Develop test harnesses in Java</li>
+                <li>Develop test procedures and scenarios to ensure thorough testing</li>
+                <li>Black box testing of developed code using test harnesses</li>
+                <li>Documentation of test results and distribution to developers for error correction</li>
+            </ul>
+            <h4><strong>Business Consultant:</strong> Government Contract</h4>
+            <ul style="margin-top: -15px">
+                <li>Manage client relationships and expectations</li>
+                <li>Inform client through progress reporting process</li>
+                <li>Manage and develop deliverables and work products</li>
+            </ul>
+        </div>
 
+        <h3>Employment History:</h3>
+        <div style="margin-left: 15px">
+            <h4>Jan., '05 to Present: Intalgent., Charlottesville, Virginia</h4>
+            <p style="margin-left:15px; margin-top: -15px">Senior Software Developer with experience in extensive J2EE experience responsible for requirements gathering, architecture, development, testing and implementation of medium and large scale J2EE projects. Assisted in moving the company towards an Agile development environment by introducing Test Driven Development, Continuous Integration, Iterative designs with emphasis on close, cooperative relationships with colleagues, clients and vendors.</p>
+            <h4>Oct., '04 to Jan., '05: PRIME Alliance Government Contract., Lanham, Maryland</h4>
+            <p style="margin-left:15px; margin-top: -15px">Java Developer responsible for requirements gathering, design, development, testing and implementation of small Java project. Developed an application to convert a proprietary flat file database to a SQL Server DDL.</p>
+            <h4>Dec., '01 to Oct., '04: PRIME Alliance Government Contract., Lanham, Maryland</h4>
+            <p style="margin-left:15px; margin-top: -15px">Project Manager for database development project. Responsible for management of requirements, design, development, testing, integration, deployment and suppport. Also responsible for documenting and maintaining Java and VB applications used in a Business Rules Engine development and implementation project.</p>
+            <h4>Jun., '01 to Present: Organization Solutions Inc., Annapolis, Maryland</h4>
+            <p style="margin-left:15px; margin-top: -15px">Responsible for management of the IT department including the design, recommendation, development, deployment and maintenance of the company network and intranet. Other responsibilities include the recommendation, acquisition and deployment of employee hardware and technical support systems and the design and deployment of secure remote data stores including security and fire protection.</p>
+            <h4>Mar., '01 to Jun., '01: Unetworks Inc., Charlottesville, Virginia</h4>
+            <p style="margin-left:15px; margin-top: -15px">Responsible to the CIO and CTO as Manager of the Configuration Management (CM) and Testing Department. This included development of processes and procedures, implementation of Concurrent Versioning System (CVS) CM software, management of developer code and development of Java test harnesses.</p>
+            <h4>Dec., '00 to Mar., '01: Optisel, Charlottesville, Virginia</h4>
+            <p style="margin-left:15px; margin-top: -15px">Responsible to the Senior Development Manager for the development of Siebel applications. Trained for Siebel development by Merisel and subsequently applied those skills to create a Customer Account Management application to compliment the existing order fulfillment system.</p>
+            <h4>Apr., '99 to Dec., '00: Value America Inc., Charlottesville, Virginia</h4>
+            <p style="margin-left:15px; margin-top: -15px">Systems/Network Administrator responsible for power and cooling management and monitoring, web farm administration and maintenance and server outage troubleshooting. Also responsible for the establishment and operation of automated load testing of the Value America site and for managing and releasing the static and dynamic content on the site.</p>
+            <h4>Nov., '97 to Apr., '99: The Wolf-Trap Foundation, Vienna, Virginia</h4>
+            <p style="margin-left:15px; margin-top: -15px">Responsible to the Director of Development for requirements analysis, Access database development, daily maintenance of proprietary database involving import, export and manipulation of outside data, and LAN administration.</p>
+        </div>
 
-  Justin C. Beck
-  5472 Hill Top Street, Crozet, VA 22932
-  Work: (434) 977-5152 x.105; Cell: (434) 249-5083; Home: (434) 823-2099
-  E-Mail: justinbeck@mac.com
-               
+        <h3>Education:</h3>
+        <div style="margin-left: 15px">
+            <p>Sept., '03: Microsoft Certified Systems Administrator (MCSA) + Security</p>
+            <p>Aug., '02: Cisco Certified Network Associate (CCNA)</p>
+            <p>Sept., '92 to Jul., '97 Northern Virginia Community College: AS. In Computer Science (GPA: 3.18)</p>
+        </div>
 
-  Summary of Experience and Responsibilities
-  Senior Software Developer:  Software Development Firm
-  ¥	Develop full project architecture
-  ¥	Lead development efforts in small teams of three or four developers
-  ¥	Work in short iterations to bring maximum value for customer satisfaction and confidence
-  ¥	Development and implementation of Agile development environment
-  ¥	Customer facing role for requirements gathering
-  Java Developer: Business Rules, Java Development Project
-  ¥	Development of Java application to parse proprietary database schema to SQL Server
-  ¥	DDL implementation subsequently done using Hibernate and MySQL
-  ¥	Requirements gathering for Tomcat deployment
-  Director of IT:  Government Consulting Firm
-  ¥	Develop and document all IT processes, policies, procedures and best practices
-  ¥	Design, implement and maintain company wide network infrastructure
-  ¥	Provide recommendations on all company hardware and software solutions
-  ¥	Manage procurement and deployment of all personnel equipment
-  Project Manager:  Database Development Project
-  ¥	Develop and maintain project schedules based on prior client experience
-  ¥	Manage requirements gathering, documentation, verification and analysis
-  ¥	Manage design work and ensure design meets requirements
-  ¥	Manage development work to WBS and requirements
-  ¥	Provide thought leadership and motivation to project team
-  Systems/Network Administrator
-  ¥	Development of network infrastructure
-  ¥	Procurement of approved infrastructure equipment
-  ¥	Installation and configuration of network infrastructure
-  ¥	Configuration of Windows 2000 servers to operate on network infrastructure
-  ¥	Configuration of Windows 2000 and XP workstations to operate on network infrastructure
-  Manager of Configuration Management:  Java Development Project
-  ¥	Development and implementation of CM best practices
-  ¥	Maintenance of CM Server environment
-  ¥	Selection and procurement of CM literature for development team
-  ¥	Management of developed Java code
-  Manager of Testing:  Java Development Project
-  ¥	Analysis of developed documentation to produce test harness specifications
-  ¥	Develop test harnesses in Java
-  ¥	Develop test procedures and scenarios to ensure thorough testing
-  ¥	Black box testing of developed code using test harnesses
-  ¥	Documentation of test results and distribution to developers for error correction
-  Business Consultant:  Government Contract
-  ¥	Manage client relationships and expectations
-  ¥	Inform client through progress reporting process
-  ¥	Manage and develop deliverables and work products
-
-  Employment History:
-  Jan., Õ05 to Present:	Intalgent., Charlottesville, Virginia
-  Senior Software Developer with experience in extensive J2EE experience responsible for requirements gathering, architecture, development, testing and implementation of medium and large scale J2EE projects.  Assisted in moving the company towards an Agile development environment by introducing Test Driven Development, Continuous Integration, Iterative designs with emphasis on close, cooperative relationships with colleagues, clients and vendors.
-
-  Oct., Õ04 to Jan., Ô05:	PRIME Alliance Government Contract., Lanham, Maryland
-  Java Developer responsible for requirements gathering, design, development, testing and implementation of small Java project.  Developed an application to convert a proprietary flat file database to a SQL Server DDL.
-
-  Dec., Õ01 to Oct., Ô04:	PRIME Alliance Government Contract., Lanham, Maryland
-  Project Manager for database development project. Responsible for management of requirements, design, development, testing, integration, deployment and suppport.  Also responsible for documenting and maintaining Java and VB applications used in a Business Rules Engine development and implementation project.
-
-  Jun., Õ01 to Present:	Organization Solutions Inc., Annapolis, Maryland
-  Responsible for management of the IT department including the design, recommendation, development, deployment and maintenance of the company network and intranet.  Other responsibilities include the recommendation, acquisition and deployment of employee hardware and technical support systems and the design and deployment of secure remote data stores including security and fire protection.
-
-  Mar., Õ01 to Jun., Õ01:	Unetworks Inc., Charlottesville, Virginia
-  Responsible to the CIO and CTO as Manager of the Configuration Management (CM) and Testing Department.  This included development of processes and procedures, implementation of Concurrent Versioning System (CVS) CM software, management of developer code and development of Java test harnesses.
-
-  Dec., Õ00 to Mar., Õ01:	Optisel, Charlottesville, Virginia
-  Responsible to the Senior Development Manager for the development of Siebel applications.  Trained for Siebel development by Merisel and subsequently applied those skills to create a Customer Account Management application to compliment the existing order fulfillment system.
-
-  Apr., Õ99 to Dec., Õ00:	Value America Inc., Charlottesville, Virginia
-  Systems/Network Administrator responsible for power and cooling management and monitoring, web farm administration and maintenance and server outage troubleshooting.  Also responsible for the establishment and operation of automated load testing of the Value America site and for managing and releasing the static and dynamic content on the site.
-
-  Nov., Õ97 to Apr., Õ99:	The Wolf-Trap Foundation, Vienna, Virginia
-  Responsible to the Director of Development for requirements analysis, Access database development, daily maintenance of proprietary database involving import, export and manipulation of outside data, and LAN administration.
-
-  Education:
-  Sept., Õ03:		Microsoft Certified Systems Administrator (MCSA) + Security
-
-  Aug., Õ02:		Cisco Certified Network Associate (CCNA)
-
-  Sept., Õ92 to Jul., Õ97	Northern Virginia Community College
-  AS. In Computer Science (GPA: 3.18)
-
-  Skills:
-  Project Management:	Microsoft Project 2000
-
-  Development:	Java 1.4.x, 5 & 6, JavaScript, HTML, Hibernate 3.2, Tapestry 3 & 4, Struts, JSP, Spring 1.2 & 2, Lucene, Quartz, MySQL 4.x, HSQLDB, JBoss 3.2.x & 4.x, Ant, JUnit 3.8.x & 4.x
-
-  Sys./Net. Admin.:	LAN/WAN technologies, Ethernet, TCP/IP, Network architecture and design, Windows 98/NT/XP/2000 (Professional and Server), Cisco PIX and IOS configuration, Microsoft IIS, JBoss, Microsoft Active Directory, DNS, WINS, DHCP
-
-  Operating Systems:	Mac OS X, Ubuntu 5.x & 6.x, Redhat Linux, Cent OS 4.x & 5.x, Fedora Core 3, 4 & 5, IBM OS/2, Microsoft Windows 98 SE, Windows NT Server 4.0, Windows 2000 Server/Professional, Windows XP Professional
-
-  CM:	Concurrent Versioning System, Subversion
-
-  Other:		Twisted pair and thin coax network cable installation and repair
-  
-
-
-  </body>
+        <h3>Skills:</h3>
+        <div style="margin-left: 15px">
+            <p><strong>Project Management:</strong> Microsoft Project 2000</p>
+            <p><strong>Development:</strong> Java 1.4.x, 5 & 6, JavaScript, HTML, Hibernate 3.2, Tapestry 3 & 4, Struts, JSP, Spring 1.2 & 2, Lucene, Quartz, MySQL 4.x, HSQLDB, JBoss 3.2.x & 4.x, Ant, JUnit 3.8.x & 4.x</p>
+            <p><strong>Sys./Net. Admin.:</strong> LAN/WAN technologies, Ethernet, TCP/IP, Network architecture and design, Windows 98/NT/XP/2000 (Professional and Server), Cisco PIX and IOS configuration, Microsoft IIS, JBoss, Microsoft Active Directory, DNS, WINS, DHCP</p>
+            <p><strong>Operating Systems:</strong> Mac OS X, Ubuntu 5.x & 6.x, Redhat Linux, Cent OS 4.x & 5.x, Fedora Core 3, 4 & 5, IBM OS/2, Microsoft Windows 98 SE, Windows NT Server 4.0, Windows 2000 Server/Professional, Windows XP Professional</p>
+            <p><strong>CM:</strong> Concurrent Versioning System, Subversion</p>
+            <p><strong>Other:</strong> Twisted pair and thin coax network cable installation and repair</p>
+        </div>
+    </div>
+</div>
+</body>
 </html>
