--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -24,6 +24,13 @@
     <div align="left" style="width: 600px; margin-left: .5in">
         <h3>Summary of Experience and Responsibilities</h3>
         <div style="margin-left: 15px">
+            <h4><strong>Director of Technical Services:</strong> Software Development Firm</h4>
+            <ul style="margin-top: -15px">
+                <li>Development and implementation of Agile software development processes</li>
+                <li>Development and implementation of client engagement process</li>
+                <li>Business development through immersion into local technology community</li>
+                <li>Complete management of Software Development and Managed Hosting groups</li>
+            </ul>
             <h4><strong>Senior Software Developer:</strong> Software Development Firm</h4>
             <ul style="margin-top: -15px">
                 <li>Develop full project architecture</li>
@@ -87,12 +94,12 @@
         <h3>Employment History:</h3>
         <div style="margin-left: 15px">
             <h4>Jan., '05 to Present: Intalgent., Charlottesville, Virginia</h4>
-            <p style="margin-left:15px; margin-top: -15px">Senior Software Developer with experience in extensive J2EE experience responsible for requirements gathering, architecture, development, testing and implementation of medium and large scale J2EE projects. Assisted in moving the company towards an Agile development environment by introducing Test Driven Development, Continuous Integration, Iterative designs with emphasis on close, cooperative relationships with colleagues, clients and vendors.</p>
+            <p style="margin-left:15px; margin-top: -15px">Senior Software Developer and Lead Developer with six years of software development experience.  Client facing role responsible for requirements gathering and analysis, solutions architecture, implementation, testing and deployment.  Also responsible for a team of three to four developers which entailed assisting peers with technical problems and mentoring.</p><p style="margin-left:15px">Promoted, in January of 2009, to Director of Technical Services.  With over ten years of software development and systems administration experience new responsibilities include management of day to day operations of both software development and managed hosting groups as well as business development and client engagement.  Other responsibilities include the implementation of industry standard technologies with the aim of employing repeatable software development and managed hosting processes and procedures.</p>
             <h4>Oct., '04 to Jan., '05: PRIME Alliance Government Contract., Lanham, Maryland</h4>
             <p style="margin-left:15px; margin-top: -15px">Java Developer responsible for requirements gathering, design, development, testing and implementation of small Java project. Developed an application to convert a proprietary flat file database to a SQL Server DDL.</p>
             <h4>Dec., '01 to Oct., '04: PRIME Alliance Government Contract., Lanham, Maryland</h4>
             <p style="margin-left:15px; margin-top: -15px">Project Manager for database development project. Responsible for management of requirements, design, development, testing, integration, deployment and suppport. Also responsible for documenting and maintaining Java and VB applications used in a Business Rules Engine development and implementation project.</p>
-            <h4>Jun., '01 to Present: Organization Solutions Inc., Annapolis, Maryland</h4>
+            <h4>Jun., '01 to Jan., '05: Organization Solutions Inc., Annapolis, Maryland</h4>
             <p style="margin-left:15px; margin-top: -15px">Responsible for management of the IT department including the design, recommendation, development, deployment and maintenance of the company network and intranet. Other responsibilities include the recommendation, acquisition and deployment of employee hardware and technical support systems and the design and deployment of secure remote data stores including security and fire protection.</p>
             <h4>Mar., '01 to Jun., '01: Unetworks Inc., Charlottesville, Virginia</h4>
             <p style="margin-left:15px; margin-top: -15px">Responsible to the CIO and CTO as Manager of the Configuration Management (CM) and Testing Department. This included development of processes and procedures, implementation of Concurrent Versioning System (CVS) CM software, management of developer code and development of Java test harnesses.</p>
@@ -113,11 +120,12 @@
 
         <h3>Skills:</h3>
         <div style="margin-left: 15px">
-            <p><strong>Project Management:</strong> Microsoft Project 2000</p>
-            <p><strong>Development:</strong> Java 1.4.x, 5 & 6, JavaScript, HTML, Hibernate 3.2, Tapestry 3 & 4, Struts, JSP, Spring 1.2 & 2, Lucene, Quartz, MySQL 4.x, HSQLDB, JBoss 3.2.x & 4.x, Ant, JUnit 3.8.x & 4.x</p>
-            <p><strong>Sys./Net. Admin.:</strong> LAN/WAN technologies, Ethernet, TCP/IP, Network architecture and design, Windows 98/NT/XP/2000 (Professional and Server), Cisco PIX and IOS configuration, Microsoft IIS, JBoss, Microsoft Active Directory, DNS, WINS, DHCP</p>
-            <p><strong>Operating Systems:</strong> Mac OS X, Ubuntu 5.x & 6.x, Redhat Linux, Cent OS 4.x & 5.x, Fedora Core 3, 4 & 5, IBM OS/2, Microsoft Windows 98 SE, Windows NT Server 4.0, Windows 2000 Server/Professional, Windows XP Professional</p>
-            <p><strong>CM:</strong> Concurrent Versioning System, Subversion</p>
+            <p><strong>Software Development:</strong> Java 1.4.x, 5 & 6, JavaScript, HTML, Hibernate, Tapestry, Struts, JSP, Spring, Lucene & Solr, Quartz, MySQL, HSQLDB, JBoss, Ant, JUnit, Ruby on Rails, Groovy on Grails, Python</p>
+            <p><strong>Sys./Net. Admin.:</strong> LAN/WAN technologies, Ethernet, TCP/IP, Network architecture and design, Cisco PIX and IOS configuration, DNS, WINS, DHCP</p>
+            <p><strong>Operating Systems:</strong> Mac OS X, Ubuntu, Redhat Linux, Cent OS, Fedora, IBM OS/2, Windows 2000 Server/Professional, Windows XP Professional</p>
+            <p><strong>CM:</strong> Concurrent Versioning System, Subversion, Git</p>
+            <p><strong>CI:</strong> Bamboo</p>
+            <p><strong>Agile Development:</strong> Scrum, XP</p>
             <p><strong>Other:</strong> Twisted pair and thin coax network cable installation and repair</p>
         </div>
     </div>
