Commented out the link to the blog for now
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@19 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -19,7 +19,7 @@
     <h2>Justin C. Beck</h2>
     <div style="margin-top: -15px">
         E-Mail: <%= link_to 'justinbeck@mac.com', 'mailto:justinbeck@mac.com' %><br />
-        <%= link_to 'My Blog', '/posts' %><br />
+        <!--<%= link_to 'My Blog', '/posts' %><br />-->
         <%= link_to 'www.justinbeck.com', 'http://www.justinbeck.com' %>
     </div>
     <div align="left" style="width: 600px; margin-left: .5in">
