More styling, began adding content to right side div on blog.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@24 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -22,12 +22,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="prepend-5 span-14">
-            <div style="background-color: #D8D8D8; padding: 10px">
-                <h2 class="prepend-5 bottom">Justin C. Beck</h2>
-                <span class="prepend-5">E-Mail: <%= link_to 'justinbeck@mac.com', 'mailto:justinbeck@mac.com' %></span><br />
-                <span class="prepend-6">&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'My Blog', '/posts' %></span><br />
-                <span class="prepend-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'www.justinbeck.com', 'http://www.justinbeck.com' %></span><br /><br />
+        <div class="prepend-3 span-18">
+            <div style="background-color: #E8E8E8; padding: 10px">
+                <h2 class="prepend-7 bottom">Justin C. Beck</h2>
+                <span class="prepend-7">E-Mail: <%= link_to 'justinbeck@mac.com', 'mailto:justinbeck@mac.com' %></span><br />
+                <span class="prepend-8">&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'My Blog', '/posts' %></span><br />
+                <span class="prepend-7">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'www.justinbeck.com', 'http://www.justinbeck.com' %></span><br /><br />
                 <h3>Summary of Experience and Responsibilities</h3>
                 <h4 class="bottom">Director of Technical Services: Software Development Firm</h4>
                 <ul>
