--- a/app/views/layouts/main.erb
+++ b/app/views/layouts/main.erb
@@ -119,6 +119,7 @@
                 <% if session[:user_id] == 1 %>
                     <div style="padding-left: 10px; width: 147px; border: 1px solid #fff; margin-bottom: 10px;">
                         <h5 style="margin: 0; padding: 5px 0 5px 0;">Administration</h5>
+                        <%= link_to 'New Post', '/post' %><br />
                         <%= link_to 'Posts', '/list' %><br />
                         <%= link_to 'Logout', '/logout' %><br />
                         &nbsp;
