Added the ability for logged in user to edit posts.  Also added the ability to set a post as not published.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@45 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/layouts/main.erb
+++ b/app/views/layouts/main.erb
@@ -108,10 +108,10 @@
                     <%= link_to 'Blog', '/' %><br />
                     &nbsp;
                 </div>
-                <% if @posts.size > 0 %>
+                <% if @summary_posts.size > 0 %>
                     <div style="padding-left: 10px; width: 147px; border: 1px solid #fff; margin-bottom: 10px;">
                         <h5 style="margin: 0; padding: 5px 0 5px 0;">Recent Posts</h5>
-                        <% @posts.each do |post| -%>
+                        <% @summary_posts.each do |post| -%>
                           <%= link_to post.subject, show_path(post.id) %><br />
                         <% end -%><br />
                     </div>
