--- a/app/views/layouts/main.erb
+++ b/app/views/layouts/main.erb
@@ -49,15 +49,7 @@
                         <% end -%><br />
                     </div>
                 <% end %>
-                <% if session[:user_id] == 1 %>
-                    <div style="padding-left: 10px; width: 147px; border: 1px solid #fff; margin-bottom: 10px;">
-                        <h5 style="margin: 0; padding: 5px 0 5px 0;">Administration</h5>
-                        <%= link_to 'New Post', '/posts/new' %><br />
-                        <%= link_to 'Posts', '/posts/list' %><br />
-                        <%= link_to 'Logout', '/logout' %><br />
-                        &nbsp;
-                    </div>
-                <% end %>
+                <%= render :partial => 'layouts/admin' %>
             </div>
         </div>
     </div>
