Commenting out some broken stuff.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@74 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/layouts/_admin.erb
+++ b/app/views/layouts/_admin.erb
@@ -12,7 +12,7 @@
         &nbsp;
     <% else -%>
         <%= link_to "Log in",  '/login',  { :title => "Log in" } %><br />
-        <%= link_to "Sign up", '/signup', { :title => "Create an account" } %><br />
+        <!--<%= link_to "Sign up", '/signup', { :title => "Create an account" } %><br />-->
         &nbsp;
     <% end -%>
 </div>
