Finished integrating AuthLogic.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@90 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/posts/list.erb
+++ b/app/views/posts/list.erb
@@ -15,7 +15,7 @@
             <tr>
                 <td><%= link_to post.subject, edit_post_path(post) %></td>
                 <td><%= post.created_at.strftime("%m/%d/%Y") %></td>
-                <td>Change Me to the current user (AuthLogic)</td>
+                <td><%= User.find(post.user_id).login %></td>
                 <% if post.published? %>
                     <td>Published</td>
                 <% else %>
