--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
-<h1>Register</h1>
-
+<div class="prepend-3" style="padding-top: 25px;">
+<br />
 <% form_for @user, :url => account_path do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
+  <br />
   <%= f.submit "Register" %>
 <% end %>
+</div>
