--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -36,7 +36,7 @@
         <h2 class="bottom" style="margin-bottom: -10px; padding-top: 10px;">
             <span id="preview_subject"></span>
         </h2>
-        <span class="small quiet"><%= @post.created_at.strftime("%m/%d/%Y %H:%M:%S") %> by <%= User.find(@post.user_id).name %></span><br />
+        <span class="small quiet"><%= @post.created_at.strftime("%m/%d/%Y %H:%M:%S") %> by <%= User.find(@post.user_id).login %></span><br />
         <span id="preview_body"></span>
         <%= tag "input", { :type => "button", :value => "Edit", :id => "edit_button", :onclick => 'edit();' } %>
     </div>
