--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,37 +1,22 @@
 <p>
-  <b>Login:</b>
-  <%=h @user.login %>
+  <b>Login:</b><%=h @user.login %>
 </p>
-
 <p>
-  <b>Login count:</b>
-  <%=h @user.login_count %>
+  <b>Login count:</b><%=h @user.login_count %>
 </p>
-
 <p>
-  <b>Last request at:</b>
-  <%=h @user.last_request_at %>
+  <b>Last request at:</b><%=h @user.last_request_at %>
 </p>
-
 <p>
-  <b>Last login at:</b>
-  <%=h @user.last_login_at %>
+  <b>Last login at:</b><%=h @user.last_login_at %>
 </p>
-
 <p>
-  <b>Current login at:</b>
-  <%=h @user.current_login_at %>
+  <b>Current login at:</b><%=h @user.current_login_at %>
 </p>
-
 <p>
-  <b>Last login ip:</b>
-  <%=h @user.last_login_ip %>
+  <b>Last login ip:</b><%=h @user.last_login_ip %>
 </p>
-
 <p>
-  <b>Current login ip:</b>
-  <%=h @user.current_login_ip %>
+  <b>Current login ip:</b><%=h @user.current_login_ip %>
 </p>
-
-
 <%= link_to 'Edit', edit_account_path %>
