Fixed a couple of issues where usernames were not showing up correctly and some paths were not quite right.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@91 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/layouts/_admin.erb
+++ b/app/views/layouts/_admin.erb
@@ -13,7 +13,8 @@
         &nbsp;
     <% else -%>
         <%= link_to "Log in",  '/login',  { :title => "Log in" } %><br />
-        <%= link_to "Sign up", '/register', { :title => "Create an account" } %><br />
+        <!-- Uncomment this to allow signup -->
+        <!--<%= link_to "Sign up", '/register', { :title => "Create an account" } %><br />-->
         &nbsp;
     <% end -%>
 </div>
