--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -8,7 +8,7 @@
       <h2 class="bottom" style="margin-bottom: -10px; padding-top: 10px;">
           <%= link_to post.subject, post %>
       </h2>
-      <span class="small quiet"><%= post.created_at.strftime("%m/%d/%Y %H:%M:%S") %> by Change Me!</span><br />
+      <span class="small quiet"><%= post.created_at.strftime("%m/%d/%Y %H:%M:%S") %> by <%= User.find(post.user_id).login %></span><br />
       <%= post.body %>
       <div style="margin: 10px;">
           <h4 class="bottom">Your Comments (and sometimes mine)</h4>
