Made minor changes to layouts.
git-svn-id: svn+ssh://svn.beckproduct.com/svnroot/justinbeck/trunk@92 461604b8-cbb9-4c6a-b984-f4fa5d6bc773

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,9 @@
-<h1>Edit My Account</h1>
+<div class="prepend-3" style="padding-top: 25px;">
+    <% form_for @user, :url => account_path do |f| %>
+      <%= f.error_messages %>
+      <%= render :partial => "form", :object => f %>
+      <%= f.submit "Update" %>
+    <% end %>
 
-<% form_for @user, :url => account_path do |f| %>
-  <%= f.error_messages %>
-  <%= render :partial => "form", :object => f %>
-  <%= f.submit "Update" %>
-<% end %>
-
-<br /><%= link_to "My Profile", account_path %>
+    <br /><%= link_to "My Profile", account_path %>
+</div>
