--- a/app/views/images/list.rhtml
+++ b/app/views/images/list.rhtml
@@ -1,25 +1,20 @@
-<h1>Listing images</h1>
-
-<table>
-  <tr>
-  <% for column in Image.content_columns %>
-    <th><%= column.human_name %></th>
+<div class="prepend-3" style="padding-top: 25px;">
+  <% if @images.size > 0 -%>
+    <table class="bottom" style="margin-bottom: -10px; padding-top: 10px;">
+      <tr>
+        <th>Name</th>
+        <th>Width</th>
+        <th>Height</th>
+      </tr>
+    <% for image in @images %>
+      <tr>
+        <td><%= link_to image.name, :action => 'show', :id => image %></td>
+        <td><%= image.width %></td>
+        <td><%= image.height %></td>
+      </tr>
+    <% end %>
+    </table>
   <% end %>
-  </tr>
-  
-<% for image in @images %>
-  <tr>
-  <% for column in Image.content_columns %>
-    <td><%=h image.send(column.name) %></td>
-  <% end %>
-    <td><%= image.img_tag_thumbnail %></td>
-    <td><%= link_to 'Show', :action => 'show', :id => image %></td>
-    <td><%= link_to 'Edit', :action => 'edit', :id => image %></td>
-    <td><%= link_to 'Destroy', { :action => 'destroy', :id => image }, :confirm => 'Are you sure?', :method => :post %></td>
-  </tr>
-<% end %>
-</table>
-
 <br />
-
 <%= link_to 'New image', :action => 'new' %>
+</div>
