--- a/app/views/images/list.rhtml
+++ b/app/views/images/list.rhtml
@@ -1,20 +1,20 @@
-<div class="prepend-3" style="padding-top: 25px;">
-  <% if @images.size > 0 -%>
-    <table class="bottom" style="margin-bottom: -10px; padding-top: 10px;">
-      <tr>
-        <th>Name</th>
-        <th>Width</th>
-        <th>Height</th>
-      </tr>
-    <% for image in @images %>
-      <tr>
-        <td><%= link_to image.name, :action => 'show', :id => image %></td>
-        <td><%= image.width %></td>
-        <td><%= image.height %></td>
-      </tr>
+<div style="padding-top: 25px;">
+    <% if @images.size > 0 -%>
+        <table class="bottom" style="margin-bottom: -10px; padding-top: 10px;">
+            <% for image in @images %>
+                <% if @index % 4 == 0 %>
+                    <tr>
+                <% end %>
+                <td>
+                    <%= link_to image.img_tag_thumbnail, :action => 'show', :id => image %>
+                </td>
+                <% if @index % 4 == 0 %>
+                    </tr>
+                <% end %>
+                <div style='display:none'><%= @index += 1 %></div>
+            <% end %>
+        </table>
     <% end %>
-    </table>
-  <% end %>
-<br />
-<%= link_to 'New image', :action => 'new' %>
+    <br />
+    <%= link_to 'New image', :action => 'new' %>
 </div>
