--- a/app/views/images/list.rhtml
+++ b/app/views/images/list.rhtml
@@ -1,17 +1,26 @@
+<div style="display:none"><% index = 0 %><% row_count = 0 %></div>
+
 <div style="padding-top: 25px;">
     <% if @images.size > 0 -%>
-        <table class="bottom" style="margin-bottom: -10px; padding-top: 10px;">
+        <table class="bottom" style="margin-bottom: -10px; padding-top: 10px;" width="510px">
             <% for image in @images %>
-                <% if @index % 4 == 0 %>
+                <% if index % 4 == 0 %>
                     <tr>
                 <% end %>
-                <td>
+                <td width="25%">
                     <%= link_to image.img_tag_thumbnail, :action => 'show', :id => image %>
+                    <div style='display:none'><%= index += 1 %></div>
                 </td>
-                <% if @index % 4 == 0 %>
+                <% if index % 4 == 0 %>
                     </tr>
                 <% end %>
-                <div style='display:none'><%= @index += 1 %></div>
+            <% end %>
+            <% if index % 4 != 0 %>
+                <% until( index % 4 == 0 ) %>
+                    <td>&nbsp;</td>
+                    <div style='display:none'><%= index += 1 %></div>
+                <% end %>
+                </tr>
             <% end %>
         </table>
     <% end %>
