--- a/app/views/images/list.rhtml
+++ b/app/views/images/list.rhtml
@@ -17,7 +17,7 @@
             <% end %>
             <% if index % 4 != 0 %>
                 <% until( index % 4 == 0 ) %>
-                    <td>&nbsp;</td>
+                    <td width="25%">&nbsp;</td>
                     <div style='display:none'><%= index += 1 %></div>
                 <% end %>
                 </tr>
