--- a/app/views/layouts/main.erb
+++ b/app/views/layouts/main.erb
@@ -28,7 +28,7 @@
       <div class="span-18 main_background" style="margin-bottom: -60px;">
         <div class="span-18" style="margin-top: 80px; border-bottom: 1px solid #7FAEBA;">
           <div class="span-13" style="margin-top: -10px; padding-left: 5px; height: 3em; color: #7FAEBA;">
-            &nbsp;&nbsp;<strong>Latest Tweet:</strong>&nbsp;<%= $twitter_status %>
+            <strong>Latest Tweet:</strong>&nbsp;<%= $twitter_status %>
           </div>
         </div>
       </div>
