--- a/app/views/posts/_comment_form.erb
+++ b/app/views/posts/_comment_form.erb
@@ -10,6 +10,7 @@
     <%= f.text_field :username %><br />
     Email (Optional):<br />
     <%= f.text_field :email %><br />
+    <%= show_simple_captcha %>
     Comment:<br />
     <%= f.text_area :body, :cols => 60, :rows => 6 , :style => "margin-top: 0px;"%><br />
     <%= submit_tag "Comment" %>
